external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/conflict_allow_expect.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10008]: ambiguous attribute value
  ┌─ tests/move_check/warning_suppression/conflict_allow_expect.move:2:9
  │
2 │ #[allow(unused_variable)]
  │         ^^^^^^^^^^^^^^^ Conflicting filter for 'unused_variable' specified in the same attribute
3 │ #[expect(unused_variable)]
  │          --------------- Conflicting filter for 'unused_variable' specified here
